# objex

./: LICENSE  README.md  TODO.md  pyproject.toml  setup.py  test.py  web-plan.md
.github/workflows/: python-tests.yml
objex/: __init__.py  __main__.py  core.py  dbutils.py  explorer.py  exporter.py  schema.py  web.py
objgraphdump/: __init__.py  checkers.c  checkers.pyx  core.py
tests/: clean_dump_fixture.py  test_objex.py
