[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "objex"
version = "0.15.dev0"
description = "object structure exporter"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD"}
authors = [
  {name = "Kurt Rose", email = "kurt@kurtrose.com"},
]
dependencies = [
]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
keywords = ["memory", "graph", "sqlite", "debugging"]

[project.optional-dependencies]
cli = [
  "colorama>=0.4.6",
  "termcolor>=2.5",
]

[project.urls]
Homepage = "https://github.com/kurtbrose/objex"

[tool.setuptools]
packages = ["objex"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
  "slow: end-to-end dump creation smoke tests",
]
